[package]
name = "sqs_wrapper"
version = "0.1.1"
authors = ["Niclas Rosengren <niclas.rosengren@gmail.com>"]
description = "Super simple wrapper around rusoto_sqs to suit specific needs"
license = "MIT"

[dependencies]
futures = "0.1"
rusoto_core = "0.35"
rusoto_sqs = "0.35"
log = "0.4"


[dev-dependencies]
tokio = "0.1"
