[package]
name = "sqs_wrapper"
version = "0.3.2"
authors = ["Niclas Rosengren <niclas.rosengren@gmail.com>"]
description = "Super simple wrapper around rusoto_sqs to suit specific needs"
license = "MIT"
edition = "2018"

[dependencies]
futures = "0.1"
rusoto_core = "0.35"
rusoto_sqs = "0.35"
log = "0.4"
serde = "1.0"
serde_json = "1.0"


[dev-dependencies]
tokio = "0.1"
serde_derive = "1.0"
